fix: fix all API of unit and device
